Bug 462798 - Smb4K mount functionality is broken after Kubuntu upgrade from 20.04 to 22.04
Summary: Smb4K mount functionality is broken after Kubuntu upgrade from 20.04 to 22.04
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-08 20:48 UTC by Dustin Siebert
Modified: 2022-12-14 08:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Latest version with domain handling fix (3.75 MB, application/vnd.debian.binary-package)
2022-12-10 19:07 UTC, Alexander Reinholdt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dustin Siebert 2022-12-08 20:48:21 UTC
SUMMARY
***
After an upgrade from Kubuntu 20.04 to 22.04 no mounts are working anymore. All dependencies are installed and former (20.04) it worked fine. Using cifs-utils via mount command works, too. I already tried the polkit hint mentioned in the manual, but sadly it wasn't a solution. Kernel.log shows the following:

Dec  8 21:42:08 tetadmin kernel: [  963.502749] audit: type=1400 audit(1670532128.618:141): apparmor="ALLOWED" operation="open" profile="/usr/sbin/sssd" name="/proc/1139/cmdline" pid=1420 comm="sssd_nss" requested_mask="r" denied_mask="r" fsuid=0 ouid=0
Dec  8 21:42:08 tetadmin kernel: [  963.508092] audit: type=1400 audit(1670532128.622:142): apparmor="ALLOWED" operation="open" profile="/usr/sbin/sssd" name="/proc/5235/cmdline" pid=1420 comm="sssd_nss" requested_mask="r" denied_mask="r" fsuid=0 ouid=0
Dec  8 21:42:08 tetadmin kernel: [  963.566235] audit: type=1400 audit(1670532128.682:143): apparmor="ALLOWED" operation="open" profile="/usr/sbin/sssd" name="/proc/5240/cmdline" pid=1420 comm="sssd_nss" requested_mask="r" denied_mask="r" fsuid=0 ouid=0
Dec  8 21:42:08 tetadmin kernel: [  963.572973] CIFS: Attempting to mount \\fs-cifs.uni-paderborn.de\home
Dec  8 21:42:08 tetadmin kernel: [  963.575507] CIFS: Status code returned 0xc000006d STATUS_LOGON_FAILURE
Dec  8 21:42:08 tetadmin kernel: [  963.575513] CIFS: VFS: \\fs-cifs.uni-paderborn.de Send error in SessSetup = -13
Dec  8 21:42:08 tetadmin kernel: [  963.575522] CIFS: VFS: cifs_mount failed w/return code = -13
Dec  8 21:42:14 tetadmin kernel: [  969.641127] audit: type=1400 audit(1670532134.758:144): apparmor="ALLOWED" operation="open" profile="/usr/sbin/sssd" name="/proc/5244/cmdline" pid=1420 comm="sssd_nss" requested_mask="r" denied_mask="r" fsuid=0 ouid=0

It's just our common file server at the university. Login via Active Directory, nothing special. As mentioned before, mount -t cifs commands work as expected. How to debug this?

***


STEPS TO REPRODUCE
1.  Upgrade from Kubuntu 20.04 to 22.04
2.  Just try to mount something

OBSERVED RESULT
Smb4k is again showing dialog for username and password and is not mounting the desired network filesystem.

EXPECTED RESULT
Mount should be successful.
Comment 1 Dustin Siebert 2022-12-09 14:40:47 UTC
Switched back to 3.0.4 of focal via dpkg under Kubuntu 22.04 and everything is working as expected. Seems to be a really faulty version 3.1.2.
Comment 2 Dustin Siebert 2022-12-09 14:52:06 UTC
3.1.3 of kinetic isn't working like 3.1.2.
Comment 3 Alexander Reinholdt 2022-12-09 16:26:20 UTC
Thank you for reporting this issue. Currently I am trying to understand what causes this problem. Could you please give an example mount command line that works? Is the share mounted from within the browser or via the mount dialog?

Apart from that, would you be willing to test the latest version for Kubuntu 22.04 (see: https://software.opensuse.org//download.html?project=home%3Aareinholdt&package=smb4k)? In case you decide to do so, please backup your ~/.local/share/smb4k/custom_options.xml  and ~/.local/share/smb4k/bookmarks.xml files to be able to restore the old formats after your tests.
Comment 4 Alexander Reinholdt 2022-12-09 16:28:13 UTC
... ah okay, you already tried 3.1.3 which did not change in the mount code compared to the latest version. So, you do not need to test.
Comment 5 Dustin Siebert 2022-12-09 16:58:16 UTC
(In reply to Alexander Reinholdt from comment #3)
> Thank you for reporting this issue. Currently I am trying to understand what
> causes this problem. Could you please give an example mount command line
> that works? 

Hi, a typical mount command would be:

# mount -t cifs -o user=<username>,domain=ad //fs-cifs.uni-paderborn/home <mount path>

> Is the share mounted from within the browser or via the mount
> dialog?

What do you mean with this? In the faulty versions i use the typical mount dialog in smb4k and it fails like explained but smb4k is showing active mounts via mount commands from the terminal. In 3.0.4 i use the mount dialog and as workgroup ad or ad.uni-paderborn.de (no difference) and then as user the normal LDAP username so without e.g. ad\<username> and it works. In 3.1. it's repeating the request for username and password.

> 
> Apart from that, would you be willing to test the latest version for Kubuntu
> 22.04 (see:
> https://software.opensuse.org//download.
> html?project=home%3Aareinholdt&package=smb4k)? In case you decide to do so,
> please backup your ~/.local/share/smb4k/custom_options.xml  and
> ~/.local/share/smb4k/bookmarks.xml files to be able to restore the old
> formats after your tests.

Hi,
Comment 6 Alexander Reinholdt 2022-12-10 11:05:01 UTC
I think I found the problem. Could you please confirm that mounting via the command line fails if you do not provide the domain?
Comment 7 Dustin Siebert 2022-12-10 12:58:03 UTC
Yes, i can confirm that. The Linux client belongs to the UNI-PADERBORN Kerberos realm via SSSD and not to the Active Directory realm. So providing the domain information is mandatory in this case. We have also a NAS system as member of the AD realm with some local accounts. For those local accounts, you have to add domain=Cancel in the command line way, otherwise it's not working. But for smb4k 3.0.4 it was sufficient to just leave the workgroup field empty in the mount dialog and that's not working in 3.1.x, too. So i guess, smb4k added "Cancel" for the domain argument internally in this case and the whole handover is broken in 3.1.x versions?
Comment 8 Alexander Reinholdt 2022-12-10 14:29:12 UTC
Thank you very much for the confirmation. What confuses me a bit is that you wrote that in Smb4K 3.0.x it was sufficient to leave the domain empty. In that case the domain was not passed to the mount command also back then...

I will commit a fix. Would you be willing to test the new version?
Comment 9 Dustin Siebert 2022-12-10 14:35:49 UTC
If you can provide a Debian package of course. I'll we be back on Wednesday in my university office. Maybe i'm wrong in the case of the local accounts. From my home office (no domain member), it's the case that i can leave the field empty. Could be that i've always entered "Cancel" or the FQDN for the local users. Let me check this on Wednesday.
Comment 10 Alexander Reinholdt 2022-12-10 14:40:13 UTC
Git commit 3423493d97bb916da083f781271ddd18fb4026f6 by Alexander Reinholdt.
Committed on 10/12/2022 at 14:39.
Pushed by areinholdt into branch '3.1'.

Always pass the domain if it is not empty and not a DNS-SD domain.

M  +1    -1    core/smb4kmounter.cpp

https://invent.kde.org/network/smb4k/commit/3423493d97bb916da083f781271ddd18fb4026f6
Comment 11 Alexander Reinholdt 2022-12-10 19:07:30 UTC
Created attachment 154486 [details]
Latest version with domain handling fix

This packages contains a fixed version of the code for mounting. Please try it out and report any issues. Thanks!
Comment 12 Alexander Reinholdt 2022-12-11 05:56:32 UTC
Git commit 6a02c8ee6231e5f001dda3c8fa3ea8c76ab508f4 by Alexander Reinholdt.
Committed on 11/12/2022 at 05:56.
Pushed by areinholdt into branch 'master'.

Apply fix from 3.1: Always pass the domain if it is not empty and not a DNS-SD domain.

M  +1    -1    core/smb4kmounter.cpp

https://invent.kde.org/network/smb4k/commit/6a02c8ee6231e5f001dda3c8fa3ea8c76ab508f4
Comment 13 Alexander Reinholdt 2022-12-11 07:24:24 UTC
Git commit 5811556c6f4df76c8be287d5e1f022862c4dfab9 by Alexander Reinholdt.
Committed on 11/12/2022 at 07:24.
Pushed by areinholdt into branch 'master'.

Forgot to fix FreeBSD code.

M  +1    -1    core/smb4kmounter.cpp

https://invent.kde.org/network/smb4k/commit/5811556c6f4df76c8be287d5e1f022862c4dfab9
Comment 14 Alexander Reinholdt 2022-12-11 07:26:08 UTC
Git commit c4c9b72ecd5f207adeab50b31f334ecae204b57b by Alexander Reinholdt.
Committed on 11/12/2022 at 07:25.
Pushed by areinholdt into branch '3.1'.

Forgot to fix FreeBSD code.

M  +1    -1    core/smb4kmounter.cpp

https://invent.kde.org/network/smb4k/commit/c4c9b72ecd5f207adeab50b31f334ecae204b57b
Comment 15 Dustin Siebert 2022-12-14 08:52:45 UTC
Sorry, i was wrong: 3.0.4 AND 3.1.x mounted the network filesystems with local accounts successfully without entering anything in the workgroup field. Perhaps i typed the login data wrongly once i tried it in 3.1.x. Nevertheless, your new version is working absolutely fine. I even have checked forcing SMB 3.1.1. So thank your very much for this fast and great support!