Always pass the domain if it is not empty and not a DNS-SD domain.

BUG: 462798